--- a/Trabalho1/css/style.css
+++ b/Trabalho1/css/style.css
@@ -6,7 +6,7 @@
 }
 
 * {
-  font-family: 'Oswald';
+  font-family: 'Oswald', sans-serif;
   box-sizing: border-box;
 }
 
@@ -88,7 +88,7 @@ body {
   border: none;
   border-radius: 0.4rem;
   background: limegreen;
-  color: #fff;
+  color: #eee;
   min-width: 8rem;
   padding: 0.8rem 1.2rem;
   box-sizing: border-box;
@@ -98,5 +98,6 @@ body {
 .botao:hover,
 .botao:focus {
   outline: none;
+  color: #fff;
   box-shadow: 0 0 0 3px greenyellow, 0 0 0 4px lawngreen;
 }
